# CAOS

./: kr3.txt
module3/drafts/: a.out  errors.c  fd_exec.c  foo  foo.c  gethostname.c  log  nonblock.c  socketpair.c  sockpair  thr_fork  threads_and_fork.c
module3/task1-0/: CMakeLists.txt  main.c
module3/task1-1/: CMakeLists.txt  a.out  main.c
module3/task1-3/: CMakeLists.txt  a.out  main.c
module3/task2-0/: a.out  main.c
module3/task2-1/: CMakeLists.txt  a.out  main.c
module3/task2-2/: CMakeLists.txt  a.out  main.c  text.txt
module3/task2-3/: CMakeLists.txt  a.out  main.c
module3/task3-0/: CMakeLists.txt  main.c
module3/task3-1/: CMakeLists.txt  a.out  main.c
module3/task3-2/: CMakeLists.txt  a.out  after_dup.c  main.c
module3/task4-0/: CMakeLists.txt  b.out  blocking-read.c  main.c
module3/task4-1/: CMakeLists.txt  a.out  main.c
module3/task5-0/: CMakeLists.txt  a.out  main.c
module3/task5-1/: CMakeLists.txt  a.out  main.c
module3/task5-2/: CMakeLists.txt  a.out  main.c
module3/task6-0/: CMakeLists.txt  a.out  main.c
module3/task6-1/: CMakeLists.txt  a.out  main.c
module3/task6-2/: CMakeLists.txt  a.out  main.c
module3/task7-0/: CMakeLists.txt  a.out  main.c
module3/task7-1/: CMakeLists.txt  a.out  main.c
module3/test/: a.out  main.c
module3/untitled/: a.out  main.c
module4/first_fuse_clion/: CMakeLists.txt  main.c
module4/python_in_c/: CMakeLists.txt  main.c
module4/task1-0/: CMakeLists.txt  main.c
module4/task2-0/: main.c  (+1 more)
module4/task5-0/: CMakeLists.txt  main.c  module.c
module4/task5-1/: CMakeLists.txt  module.c
(+48 files in other folders)
